fixed overflow space issue in the body

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -44,4 +44,5 @@ $spacers: map-merge(
 body {
   margin-top: -50px;
   color: theme-color('primary-dark');
+  overflow: hidden;
 }
